# 2024-rest-foods-backend-5

./: .env  .gitignore  Cargo.toml  README.md  compose.yml  database.db  diesel.toml
.github/workflows/: CI.yaml
migrations/2024-06-12-135712_create_schema/: down.sql  up.sql
migrations/2024-06-13-081841_rustic_foods/: down.sql  up.sql
src/: cors.rs  data.sql  db.rs  endpoint_models.rs  entities.rs  inserteable_models.rs  json_date.rs  main.rs  models.rs  rocket.rs  schema.rs
src/entities/: dish.rs  menucard.rs  person.rs  reservation.rs  setting.rs  table.rs  tag.rs  tags.rs
target 2/: .rustc_info.json
