[package]
name = "rest-foods-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
